# pixel_maper

./: Cargo.toml  LICENSE  Makefile.toml  README.md  rustfmt.toml  settings.ron
lemmy-placemaper/: Cargo.toml  README.md  settings.ron
lemmy-placemaper/src/: main.rs  place_on.rs  rank.rs  sort.rs
lemmy-placemaper/src/stats/: mod.rs  structure.rs
output/: C71 Stats Chssam.txt  C92 Stats Chssam.txt
pxls-placemaper/: Cargo.toml  DETAILS.md  README.md  main.rs  settings.ron
pxls-placemaper/V0.1.1/: README.md  settings.ron
pxls-placemaper/V0.1.1/src/: main.rs
pxls-placemaper/V0.2.0/: Cargo.toml  README.md  settings.ron
pxls-placemaper/V0.2.0/src/: main.rs
pxls-placemaper/V0.3.0/: Cargo.toml  README.md  main.rs  settings.ron
pxls-placemaper/V0.3.0/src/: main.rs
pxls-placemaper/V0.4/: Cargo.toml  README.md  settings.ron
pxls-placemaper/V0.4/output/: C76 Stats Chssam.txt
pxls-placemaper/V0.4/src/: main.rs
pxls-placemaper/V0.5/: Cargo.toml  README.md  settings.ron
pxls-placemaper/V0.5/src/: main.rs
pxls-placemaper/V0.5/src/output/: C78a Stats Chssam.txt
pxls-placemaper/V0.6/: Cargo.toml  settings.ron
pxls-placemaper/V0.6/src/: main.rs
pxls-placemaper/input/: palette_c72.txt  palette_c73.json
pxls-placemaper/latest/: Cargo.toml  Keyes.txt  README.md  main.rs  settings.ron
pxls-placemaper/latest/output/: C75 Stats Chssam V0.3.2.txt  C75 Stats Chssam.txt
pxls-placemaper/output/: C71_Stats_Sam.txt  C71_Stats_Sam_V0.3.0.txt  C71_Stats_Sammy.txt  C72_Stats_Sam_V0.1.1.txt  C73_Stats_Sam_V0.2.0.txt  C73_Stats_Sam_V0.2.1.txt  C80 Stats Chssam.txt  C85 Stats Chssam.txt
pxls-placemaper/src/: main.rs  structure.rs
