[workspace.package]
version = "0.9.0"
edition = "2024"
authors = ["Chssam"]
keywords = ["pxls.space"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Chssam/pixel_maper/tree/main"
rust-version = "1.90"
publish = false

[workspace]
resolver = "2"
members = ["pxls-placemaper", "lemmy-placemaper"]
default-members = ["pxls-placemaper", "lemmy-placemaper"]


# [profile.release]
# debug = true

[workspace.dependencies]
xz2 = "0.1"
sha256 = "1.6"
hex = "0.4"
ron = "0.10"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
gif = "0.13"

[workspace.dependencies.image]
version = "0.25"
default-features = false
features = ["png", "gif"]

[workspace.dependencies.serde]
version = "1.0"
features = ["derive"]

[workspace.lints.clippy]
type_complexity = "warn"
deprecated_semver = "deny"
