[package]
name = "lemmy-placemaper"
description = "Placemap generator for lemmy place"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false


[dependencies]
hex.workspace = true
ron.workspace = true
anyhow.workspace = true
log.workspace = true
env_logger.workspace = true
image.workspace = true
serde.workspace = true


[lints]
workspace = true
