[package]
name = "pxls-placemaper"
description = "Placemap generator for pxls.space"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false


[dependencies]
anyhow.workspace = true
xz2.workspace = true
hex.workspace = true
sha256.workspace = true
env_logger.workspace = true
image.workspace = true
gif.workspace = true
serde.workspace = true
ron.workspace = true
log.workspace = true


[lints]
workspace = true
