[package]
name = "pxls-placemaper"
version = "0.3.0"
edition = "2021"
authors = ["Chssam"]

[dependencies]
xz2 = "*"           # 0.1.7
image = "*"         # 0.24.7
sha256 = "*"        # 1.4.0
hex = "*"           # 0.4.3
ron = "*"           # 0.8.1
anyhow = "*"        # 1.0.75

[dependencies.serde]
version = "*"       # 1.0.189
features = ["derive"]
