[package]
name = "pxls-placemaper"
version = "0.4.0"
edition = "2021"
authors = ["Chssam"]

[dependencies]
xz2 = "0.1"
sha256 = "1.4"
hex = "0.4"
ron = "0.8"
anyhow = "1.0"

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "gif"]

[dependencies.serde]
version = "1.0"
features = ["derive"]
